# Platformer-Game

./: CMakeLists.txt  README.md
Data/Images/Blue_witch/: all-wip.aseprite  all.aseprite
Data/Images/kenney_animalpackredux/Spritesheet/: round.xml  roundOutline.xml  round_nodetails.xml  round_nodetailsOutline.xml  square.xml  squareOutline.xml  square_nodetails.xml  square_nodetailsOutline.xml
Data/Images/kenney_tooncharacters1/Female adventurer/Tilesheet/: character_femaleAdventurer_sheet.xml  character_femaleAdventurer_sheetHD.xml
Data/Images/kenney_tooncharacters1/Female person/Tilesheet/: character_femalePerson_sheet.xml  character_femalePerson_sheetHD.xml
Data/Images/kenney_tooncharacters1/Male adventurer/Tilesheet/: character_maleAdventurer_sheet.xml  character_maleAdventurer_sheetHD.xml
Data/Images/kenney_tooncharacters1/Robot/Tilesheet/: character_robot_sheet.xml  character_robot_sheetHD.xml
Data/Images/kenney_tooncharacters1/Zombie/Tilesheet/: character_zombie_sheetHD.xml
Documentation/: FinishedGame-UML.drawio  First-UML.drawio
src/: Functions.cpp  Functions.h  Game.cpp  Game.h  State.cpp  State.h  StateEnum.h  main.cpp
src/GameObject/: GameObjects.cpp  GameObjects.h  Maps.cpp  Maps.h  Player.cpp  Player.h
src/GameObject/Entities/: Enemy.cpp  Enemy.h
src/GameState/: GameOver.cpp  GameOver.h  GamePlay.cpp  GamePlay.h  GameWin.cpp  GameWin.h  LeveLSelector.cpp  LeveLSelector.h  MainMenu.cpp  MainMenu.h  Tutorial.cpp  Tutorial.h
